--- a/app/src/main/res/layout/activity_list_permintaan_sidang.xml
+++ b/app/src/main/res/layout/activity_list_permintaan_sidang.xml
@@ -72,7 +72,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_ta"
+            android:id="@+id/rv_sidang"
             android:layout_width="418dp"
             android:layout_height="589dp"
             android:layout_marginTop="8dp"
