--- a/app/src/main/res/layout/activity_list_logbook.xml
+++ b/app/src/main/res/layout/activity_list_logbook.xml
@@ -8,7 +8,7 @@
     tools:context=".list_logbook">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rv_lb"
         android:layout_width="412dp"
         android:layout_height="472dp"
         android:layout_marginBottom="128dp"
