--- a/app/src/main/res/layout/list_logbook.xml
+++ b/app/src/main/res/layout/list_logbook.xml
@@ -6,7 +6,7 @@
     android:layout_height="120dp">
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/buku"
         android:layout_width="72dp"
         android:layout_height="88dp"
         android:layout_marginStart="24dp"
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/ic_baseline_book_24" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/tanggal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -24,22 +24,22 @@
         android:text="Senin,13 Juli 202"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintStart_toEndOf="@+id/buku"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/rincian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Merevisi Bab I, bagian latar belakang"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.127"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        app:layout_constraintStart_toEndOf="@+id/buku"
+        app:layout_constraintTop_toBottomOf="@+id/tanggal" />
 
     <ImageView
-        android:id="@+id/imageView13"
+        android:id="@+id/imageViewDone"
         android:layout_width="24dp"
         android:layout_height="23dp"
         android:layout_marginEnd="32dp"
