--- a/app/src/main/res/layout/activity_list_permintaan_seminar.xml
+++ b/app/src/main/res/layout/activity_list_permintaan_seminar.xml
@@ -71,7 +71,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_ta"
+            android:id="@+id/rv_seminar"
             android:layout_width="match_parent"
             android:layout_height="640dp"
             android:layout_marginTop="8dp"
